Fix: WS-owner Application table overflow issue
Fixed issues in Application list table in WS owner page,
where table elements were overflowing the parent container.

--- a/src/app/components/main-page/main-workspace-applications/main-workspace-applications.component.scss
+++ b/src/app/components/main-page/main-workspace-applications/main-workspace-applications.component.scss
@@ -122,10 +122,12 @@
 
 // ---- COLUMN Info
 .mat-column-info {
-  @include uis.table-width-fix($min-width: 300px, $padding: 5px 10px);
+  @include uis.table-width-fix($width: calc(100% - 451px), $align: left, $padding: 8px 10px, $wrap: true);
+
   .name {
     @include base.headline-4($weight: 700);
     text-wrap: auto;
+    margin-bottom: 5px;
   }
 
   .description {
@@ -137,8 +139,10 @@
     @include base.centering($pos: y);
 
     .property-name {
-      @include uis.deco-text($icon: label, $icon-size: 1.6rem, $font-size: 1.1rem, $gap: 0);
+      @include uis.deco-text($icon: label, $icon-size: 1.6rem, $font-size: 1.1rem, $gap: 3px);
       margin-right: 10px;
+      white-space: nowrap;
+      flex-shrink: 0;
     }
 
     .property {
@@ -146,6 +150,7 @@
 
       .label {
         font-size: 1.1rem;
+        white-space: nowrap;
 
         &:not(:last-child)::after {
           content: '/';
@@ -161,23 +166,23 @@
   @include uis.table-width-fix($width: 150px, $padding: 2px 10px);
 
   .lifetime > span {
-    @include uis.deco-text($icon: watch_later, $icon-size: 1.6rem, $font-size: 1.2rem, $gap: 0);
+    @include uis.deco-text($icon: watch_later, $icon-size: 1.6rem, $font-size: 1.2rem, $gap: 3px);
   }
 
   .memory > span {
-    @include uis.deco-text($icon: memory, $icon-size: 1.6rem, $font-size: 1.2rem, $gap: 0);
+    @include uis.deco-text($icon: memory, $icon-size: 1.6rem, $font-size: 1.2rem, $gap: 3px);
   }
 
   .max-sessions > span {
-    @include uis.deco-text($icon: memory, $icon-size: 1.6rem, $font-size: 1.2rem, $gap: 0);
+    @include uis.deco-text($icon: memory, $icon-size: 1.6rem, $font-size: 1.2rem, $gap: 3px);
   }
 
   .shared-volume > span,
   .mywork-volume > span {
-    @include uis.deco-text($icon: folder, $icon-size: 1.6rem, $font-size: 1.2rem, $gap: 0);
+    @include uis.deco-text($icon: folder, $icon-size: 1.6rem, $font-size: 1.2rem, $gap: 3px);
 
     &.off {
-      @include uis.deco-text($icon: folder_off, $icon-size: 1.6rem, $font-size: 1.2rem, $gap: 0);
+      @include uis.deco-text($icon: folder_off, $icon-size: 1.6rem, $font-size: 1.2rem, $gap: 3px);
     }
   }
 }
